--- a/srcs/Makefile
+++ b/srcs/Makefile
@@ -6,7 +6,7 @@
 #    By: npolack <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/09/26 10:27:51 by npolack           #+#    #+#              #
-#    Updated: 2024/12/07 13:48:42 by npolack          ###   ########.fr        #
+#    Updated: 2025/03/12 19:15:01 by npolack          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -57,15 +57,14 @@ SRCS	=	ft_isspace.c	\
 			ft_putstr_fd.c	\
 			ft_putendl_fd.c	\
 			ft_putnbr_fd.c	\
-			ft_strnlen.c
+			ft_strnlen.c	\
+			ft_strtof.c		\
 
 BONUS_SRCS := $(addsuffix _bonus.c, $(BONUS_SRCS))
 BONUS_SRCS := $(addprefix ft_, $(BONUS_SRCS))
 
-OBJS_DIR	= objs
-
+OBJS_DIR	=	objs
 OBJS		=	$(SRCS:%.c=$(OBJS_DIR)/%.o)
-
 B_OBJS		=	$(BONUS_SRCS:%.c=$(OBJS_DIR)/%.o)
 
 AR 			=	ar -rcs
@@ -82,7 +81,7 @@ $(NAME)			:	$(OBJS) $(B_OBJS)
 					$(AR) $(NAME) $^ 
 
 $(OBJS_DIR)/%.o	: %.c
-	@mkdir -p $(OBJS_DIR)
+	mkdir -p $(dir $@)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean	:	
